# chess_engine

./: .gitignore  CMakeLists.txt  main.cpp
include/: ChessGame.h  GameLogic.h  GameTypes.h  MoveGenerator.h
src/: CMakeLists.txt  ChessGame.cpp  GameLogic.cpp  GameTypes.cpp  MoveGenerator.cpp
test/: CMakeLists.txt  perft.cpp  test_GameLogic.cpp  test_king_move_gen.cpp  test_knight_move_gen.cpp  test_pawn_move_gen.cpp  test_sliding_move_gen.cpp
